Updated. Schedule uploaded
Large chunks in the begining and end are just cuz i copied to clipboard or smth. exactly same code so dont worry.

--- a/schedule.html
+++ b/schedule.html
@@ -1,95 +1,174 @@
-<!DOCTYPE html>
-<html lang="en">
+	<!DOCTYPE html>
+	<html lang="en">
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>DIMUN IX</title>
-    <!-- favicon -->
-    <link rel="shortcut icon" href="logo.ico">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- Bootstrap core CSS -->
-      <link href="css/bootstrap.min.css" rel="stylesheet">
-      <!-- Material Design Bootstrap -->
-      <link href="css/mdb.min.css" rel="stylesheet">
-      <!-- Custom DIMUN style -->
-      <link href="css/dimun.css" rel="stylesheet">
-      <!-- Font Awesome -->
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-
-</head>
-<body data-spy="scroll" data-target="#scroll-list" data-offset="300">
-    <header>
-        <nav class="navbar fixed-top navbar-light scrolling-navbar navbar-expand-lg justify-content-center">
-            <ul class="nav" id="navigation">
-                <li class="nav-item">
-                    <a class="nav-link text-dark" href="committees.html">Committees</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Conference</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="directors.html">Directors</a>
-                        <a class="dropdown-item" href="secretariat.html">Secretariat</a>
-                        <a class="dropdown-item" href="so.html">Student Officers</a>
-                        <a class="dropdown-item" href="delegates.html">Delegates</a>
-                        <a class="dropdown-item" href="alumini.html">Alumini</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="theme.html">Theme</a>
-                    </div>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Logistics</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="transport.html">Transport</a>
-                        <a class="dropdown-item" href="accomadation.html">Accomadation</a>
-                        <a class="dropdown-item" href="schedule.html">Schedule</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="navbar-brand text-dark h1" href="index.html"><strong>DIMUN</strong></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-dark" href="spotlight.html">Spotlight</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-dark" href="press.html">Press</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-dark" href="contact.html">Contact Us</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-
-    <section class="section-header text-center" id="section-header">
-        <strong><h1 class="display-1">Schedule</h1></strong>
-    </section>
-
-    <section>
-        <div class="text-center container-fluid first">
-            <div class="team">
-                <h1> Schedule </h1>
-                <p><small>Check back soon for the schedule.</small></p>
-                <hr>
-            </div>
-        </div>
-    </section>
+	<head>
+	    <meta charset="utf-8">
+	    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	    <meta http-equiv="x-ua-compatible" content="ie=edge">
+	    <title>DIMUN IX</title>
+	    <!-- favicon -->
+	    <link rel="shortcut icon" href="logo.ico">
+	    <!-- Font Awesome -->
+	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	    <!-- Bootstrap core CSS -->
+	      <link href="css/bootstrap.min.css" rel="stylesheet">
+	      <!-- Material Design Bootstrap -->
+	      <link href="css/mdb.min.css" rel="stylesheet">
+	      <!-- Custom DIMUN style -->
+	      <link href="css/dimun.css" rel="stylesheet">
+	      <!-- Font Awesome -->
+	      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
 
-    <!-- SCRIPTS -->
-    <!-- JQuery -->
-    <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
-    <!-- Bootstrap tooltips -->
-    <script type="text/javascript" src="js/popper.min.js"></script>
-    <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="js/mdb.min.js"></script>
-    <!-- DIMUN Javascript -->
-    <script type="text/javascript" src="js/dimun.js"></script>
+	    <section class="section-header text-center" id="section-header">
+	        <strong><h1 class="display-1">Schedule</h1></strong>
+	    </section>
 
-</body>
+	    <section>
+	        <div class="text-center container-fluid first">
+	            <div class="team">
+	                <h1> Schedule </h1>
+	                <p><small>Below is the schedule for the conference from March 1st to 3rd.</small></p>
+	                <hr>
+					<h2>Friday, 1st March 2019</h2>
+					<table style="width:100%; ">
+						<tr>
+							<th style="text-align:left;float:left;"><strong>Event</strong></th>
+							<th style="text-align:right;float:right;"><strong>Time</strong></th>
+						</tr>
+						<tr>
+							<td style="text-align:left;float:left;">Buses depart from CITIC/Crowne Hotels</td>
+							<td style="text-align:right;float:right;">12:00</td>
+						</tr>
+						<tr>
+							<td style="text-align:left;float:left;">Opening Reception</td>
+							<td style="text-align:right;float:right;">13:00</td>
+						</tr>
+						<tr>
+							<td style="text-align:left;float:left;">Opening Ceremony commences in the Wodehouse Theater</td>
+							<td style="text-align:right;float:right;">14:00</td>
+						</tr>
+							<td style="text-align:left;float:left;">Delegates in committee rooms, roll call, opening speeches, lobbying begins</td>
+							<td style="text-align:right;float:right;">15:15</td>
+						</tr>
+						<tr>
+							<td style="text-align:left;float:left;">Break (staggered)</td>
+							<td style="text-align:right;float:right;">16:15</td>
+						</tr>
+						<tr>
+							<td style="text-align:left;float:left;">Lobbying continues<br>Approval Panel opens</td>
+							<td style="text-align:right;float:right;">16:30</td>
+						</tr>
+						<tr>
+							<td style="text-align:left;float:left;">Approval Panel closes<br>Delegates dismissed<br>Dinner</td>
+							<td style="text-align:right;float:right;">18:00</td>
+						</tr>
+						<tr>
+							<td style="text-align:left;float:left;">Buses depart to hotel</td>
+							<td style="text-align:right;float:right;">19:30</td>
+						</tr>
+					</table>
+					<hr>
+					<h2>Saturday, 2nd March 2019</h2>
+					<table style="width:100%">
+						<tr>
+							<th style="text-align:left;float:left;"><strong>Event</strong></th>
+							<th style="text-align:right;float:right;"><strong>Time</strong></th>
+						</tr>
+						<tr>
+							<td style="text-align:left;float:left;">Buses depart from CITIC/Crowne Hotels</td>
+							<td style="text-align:right;float:right;">08:00</td>
+						</tr>
+						<tr>
+							<td style="text-align:left;float:left;">Delegates in committee rooms, roll call, opening speeches, lobbying continues<br>Approval Panel opens</td>
+							<td style="text-align:right;float:right;">09:00</td>
+						</tr>
+						<tr>
+							<td style="text-align:left;float:left;">Lobbying ends<br>Break (staggered)</td>
+							<td style="text-align:right;float:right;">10:30</td>
+						</tr>
+						<tr>
+							<td style="text-align:left;float:left;">Debate begins</td>
+							<td style="text-align:right;float:right;">10:45</td>
+						</tr>
+						<tr>	
+							<td style="text-align:left;float:left;">Approval Panel closes<br>Lunch</td>
+							<td style="text-align:right;float:right;">12:30</td>
+						</tr>
+						<tr>
+							<td style="text-align:left;float:left;">Debating resumes</td>
+							<td style="text-align:right;float:right;"13:15</td>
+						</tr>
+						<tr>
+							<td style="text-align:left;float:left;">Break (staggered)</td>
+							<td style="text-align:right;float:right;"15:15</td>
+						</tr>
+						<tr>
+							<td style="text-align:left;float:left;">Delegated dismissed from debate</td>
+							<td style="text-align:right;float:right;">17:30</td>
+						</tr>
+						<tr>
+							<td style="text-align:left;float:left;">DIMUN IX Spotlight</td>
+							<td style="text-align:right;float:right;">18:30</td>
+						</tr>
+						<tr>
+							<td style="text-align:left;float:left;">Buses depart to hotels</td>
+							<td style="text-align:right;float:right;">20:15</td>
+						</tr>
+					</table>
+					<hr>
+					<h2>Sunday, 3rd March 2019</h2>
+					<table style="width:100%">
+						<tr>
+							<th style="text-align:left;float:left;"><strong>Event</strong></th>
+							<th style="text-align:right;float:right;"><strong>Time</strong></th>
+						</tr>
+						<tr>
+							<td style="text-align:left;float:left;">Buses depart from CITIC/Crowne Hotels</td>
+							<td style="text-align:right;float:right;">08:30</td>
+						</tr>
+						<tr>
+							<td style="text-align:left;float:left;">Delegates in committee rooms, roll call, opening speeches, debating resumes</td>
+							<td style="text-align:right;float:right;"09:15</td>
+						</tr>
+						<tr>
+							<td style="text-align:left;float:left;">Break (staggered)</td>
+							<td style="text-align:right;float:right;">10:30</td>
+						</tr>
+						<tr>
+							<td style="text-align:left;float:left;">Debating resumes</td>
+							<td style="text-align:right;float:right;">10:50</td>
+						</tr>
+						<tr>
+							<td style="text-align:left;float:left;">Delegates dismissed<br>Lunch</td>
+							<td style="text-align:right;float:right;">18:00</td>
+						</tr>
+						<tr>
+							<td style="text-align:left;float:left;">Closing Ceremony</td>
+							<td style="text-align:right;float:right;">13:30</td>
+						</tr>
+						<tr>
+							<td style="text-align:left;float:left;">Delegates depart</td>
+							<td style="text-align:right;float:right;">14:45</td>
+						</tr>
+					</table>
+	            </div>
+	        </div>
+	    </section>
 
-</html>
+
+	    <!-- SCRIPTS -->
+	    <!-- JQuery -->
+	    <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+	    <!-- Bootstrap tooltips -->
+	    <script type="text/javascript" src="js/popper.min.js"></script>
+	    <!-- Bootstrap core JavaScript -->
+	    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+	    <!-- MDB core JavaScript -->
+	    <script type="text/javascript" src="js/mdb.min.js"></script>
+	    <!-- DIMUN Javascript -->
+	    <script type="text/javascript" src="js/dimun.js"></script>
+
+	</body>
+
+	</html>
