--- a/schedule.html
+++ b/schedule.html
@@ -19,6 +19,49 @@
 	      <!-- Font Awesome -->
 	      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
+	</head>
+	<body data-spy="scroll" data-target="#scroll-list" data-offset="300">
+	    <header>
+	        <nav class="navbar fixed-top navbar-light scrolling-navbar navbar-expand-lg justify-content-center">
+	            <ul class="nav" id="navigation">
+	                <li class="nav-item">
+	                    <a class="nav-link text-dark" href="committees.html">Committees</a>
+	                </li>
+	                <li class="nav-item dropdown">
+	                    <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Conference</a>
+	                    <div class="dropdown-menu">
+	                        <a class="dropdown-item" href="directors.html">Directors</a>
+	                        <a class="dropdown-item" href="secretariat.html">Secretariat</a>
+	                        <a class="dropdown-item" href="so.html">Student Officers</a>
+	                        <a class="dropdown-item" href="delegates.html">Delegates</a>
+	                        <a class="dropdown-item" href="alumini.html">Alumini</a>
+	                        <div class="dropdown-divider"></div>
+	                        <a class="dropdown-item" href="theme.html">Theme</a>
+	                    </div>
+	                </li>
+	                <li class="nav-item dropdown">
+	                    <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Logistics</a>
+	                    <div class="dropdown-menu">
+	                        <a class="dropdown-item" href="transport.html">Transport</a>
+	                        <a class="dropdown-item" href="accomadation.html">Accomadation</a>
+	                        <a class="dropdown-item" href="schedule.html">Schedule</a>
+	                    </div>
+	                </li>
+	                <li class="nav-item">
+	                    <a class="navbar-brand text-dark h1" href="index.html"><strong>DIMUN</strong></a>
+	                </li>
+	                <li class="nav-item">
+	                    <a class="nav-link text-dark" href="spotlight.html">Spotlight</a>
+	                </li>
+	                <li class="nav-item">
+	                    <a class="nav-link text-dark" href="press.html">Press</a>
+	                </li>
+	                <li class="nav-item">
+	                    <a class="nav-link text-dark" href="contact.html">Contact Us</a>
+	                </li>
+	            </ul>
+	        </nav>
+	    </header>
 
 	    <section class="section-header text-center" id="section-header">
 	        <strong><h1 class="display-1">Schedule</h1></strong>
