Uploaded DIMUNITE Issues for VIII and VII

--- a/press.html
+++ b/press.html
@@ -72,10 +72,32 @@
             <div class="team">
                 <h1>Press</h1>
                 <hr>
+				
             </div>
         </div>
     </section>
+	
+	<section id="VIIIissue">
+    		<br><br>
+    		<h1 align="center">DIMUNITE VIII Issue</h1>
+    		<hr class="hrtitle">
+    		<center>
+			<img hspace="3.5%" class="imgbtn" onclick="Issue1VIII();" src="images/Press/DIMUNITE ISSUE 1.jpg" width="158.4px" height="234.8px">
+			<img hspace="3.5%" class="imgbtn" onclick="Issue2VIII();" src="images/Press/WeChat Image_20180302234459.png" width="158.4px" height="234.8px">
+			<img hspace="3.5%" class="imgbtn" onclick="Issue3VIII();" src="images/Press/COVERPAGE3.png" width="158.4px" height="234.8px">
+		</center>
+   	</section>
 
+	<section id="VIIissue">
+    		<br><br>
+    		<h1 align="center">DIMUNITE VII Issue</h1>
+    		<hr class="hrtitle">
+    		<center>
+			<img hspace="3.5%" class="imgbtn" onclick="Issue1VII();" src="images/Press/Issue1.png" width="158.4px" height="234.8px">
+			<img hspace="3.5%" class="imgbtn" onclick="Issue2VII();" src="images/Press/Issue2.png" width="158.4px" height="234.8px">
+			<img hspace="3.5%" class="imgbtn" onclick="Issue3VII();" src="images/Press/Issue3.png" width="158.4px" height="234.8px">
+		</center>
+   	</section>
 
     <!-- SCRIPTS -->
     <!-- JQuery -->
@@ -88,6 +110,35 @@
     <script type="text/javascript" src="js/mdb.min.js"></script>
     <!-- DIMUN Javascript -->
     <script type="text/javascript" src="js/dimun.js"></script>
+
+<script>
+	function Issue1VIII()
+		{
+			window.open("https://github.com/dadimun/pdfs/raw/master/Press/VIII/DIMUNITE%20ISSUE%201.pdf")
+		}
+	function Issue2VIII()
+		{
+			window.open("https://github.com/dadimun/pdfs/raw/master/Press/VIII/DIMUNITE%20ISSUE%202.pdf")
+		}
+	function Issue3VIII()
+		{
+			window.open("https://github.com/dadimun/pdfs/raw/master/Press/VIII/DIMUNITE%20ISSUE%203.pdf")
+		}
+	function Issue1()
+		{
+			window.open("https://github.com/dadimun/pdfs/raw/master/Press/DIMUNITE%20issue%201%20.pdf")
+		}
+		
+	function Issue2()
+		{
+			window.open("https://github.com/dadimun/pdfs/raw/master/Press/DIMUNITE%20issue%202.pdf")
+		}
+	
+	function Issue3()
+		{
+			window.open("https://github.com/dadimun/pdfs/raw/master/Press/DIMUNITE%20issue%203.pdf")
+		}
+</script>
 
 </body>
 
