Fixed Press links, updated theme desc

--- a/press.html
+++ b/press.html
@@ -72,32 +72,25 @@
             <div class="team">
                 <h1>Press</h1>
                 <hr>
-				
             </div>
         </div>
-    </section>
-	
-	<section id="VIIIissue">
-    		<br><br>
+
     		<h1 align="center">DIMUNITE VIII Issue</h1>
-    		<hr class="hrtitle">
+    		<hr >
     		<center>
-			<img hspace="3.5%" class="imgbtn" onclick="Issue1VIII();" src="images/Press/DIMUNITE ISSUE 1.jpg" width="158.4px" height="234.8px">
-			<img hspace="3.5%" class="imgbtn" onclick="Issue2VIII();" src="images/Press/WeChat Image_20180302234459.png" width="158.4px" height="234.8px">
-			<img hspace="3.5%" class="imgbtn" onclick="Issue3VIII();" src="images/Press/COVERPAGE3.png" width="158.4px" height="234.8px">
+			<img hspace="3.5%" class="imgbtn" onclick="Issue1VIII();" src="img/Press/DIMUNITE ISSUE 1.jpg" width="158.4px" height="234.8px">
+			<img hspace="3.5%" class="imgbtn" onclick="Issue2VIII();" src="img/Press/WeChat Image_20180302234459.png" width="158.4px" height="234.8px">
+			<img hspace="3.5%" class="imgbtn" onclick="Issue3VIII();" src="img/Press/COVERPAGE3.png" width="158.4px" height="234.8px">
 		</center>
    	</section>
 
-	<section id="VIIissue">
-    		<br><br>
     		<h1 align="center">DIMUNITE VII Issue</h1>
     		<hr class="hrtitle">
     		<center>
-			<img hspace="3.5%" class="imgbtn" onclick="Issue1VII();" src="images/Press/Issue1.png" width="158.4px" height="234.8px">
-			<img hspace="3.5%" class="imgbtn" onclick="Issue2VII();" src="images/Press/Issue2.png" width="158.4px" height="234.8px">
-			<img hspace="3.5%" class="imgbtn" onclick="Issue3VII();" src="images/Press/Issue3.png" width="158.4px" height="234.8px">
+			<img hspace="3.5%" class="imgbtn" onclick="Issue1VII();" src="img/Press/Issue1.png" width="158.4px" height="234.8px">
+			<img hspace="3.5%" class="imgbtn" onclick="Issue2VII();" src="img/Press/Issue2.png" width="158.4px" height="234.8px">
+			<img hspace="3.5%" class="imgbtn" onclick="Issue3VII();" src="img/Press/Issue3.png" width="158.4px" height="234.8px">
 		</center>
-   	</section>
 
     <!-- SCRIPTS -->
     <!-- JQuery -->
