Added several new pages.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,23 @@
                     <a class="nav-link text-dark" href="committees.html">Committees</a>
                 </li>
                 <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Logistics</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="transport.html">Transport</a>
+                        <a class="dropdown-item" href="accomadation.html">Accomadation</a>
+                        <a class="dropdown-item" href="schedule.html">Schedule</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" href="press.html">Press</a>
+                </li>
+                <li class="nav-item">
+                    <a class="navbar-brand text-dark h1" href="index.html"><strong>DIMUN</strong></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" href="spotlight.html">Spotlight</a>
+                </li>
+                <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Conference</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="directors.html">Directors</a>
@@ -39,23 +56,6 @@
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="theme.html">Theme</a>
                     </div>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Logistics</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="transport.html">Transport</a>
-                        <a class="dropdown-item" href="accomadation.html">Accomadation</a>
-                        <a class="dropdown-item" href="schedule.html">Schedule</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="navbar-brand text-dark h1" href="index.html"><strong>DIMUN</strong></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-dark" href="spotlight.html">Spotlight</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-dark" href="press.html">Press</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-dark" href="contact.html">Contact Us</a>
@@ -134,7 +134,7 @@
                             <!-- Text -->
                             <p class="card-text white-text mb-4">DIMUN Spotlight is a special event for DIMUN in which delegates can show off any talent that they might have. Who knows what spectacular performances will there be this year?</p>
                             <!-- Link -->
-                            <a href="#!" class="white-text d-flex justify-content-end"><h5>Find out more <i class="fa fa-angle-double-right"></i></h5></a>
+                            <a href="spotlight.html" class="white-text d-flex justify-content-end"><h5>Find out more <i class="fa fa-angle-double-right"></i></h5></a>
                         </div>
                     </div>
                 </div>
@@ -156,7 +156,7 @@
                             <!-- Text -->
                             <p class="card-text white-text mb-4">Prior to the conference, delegates are required to research their assigned countries in order to represent them effectively in debate. Delegates may go here to prepare.</p>
                             <!-- Link -->
-                            <a href="#!" class="white-text d-flex justify-content-end"><h5>Find out more <i class="fa fa-angle-double-right"></i></h5></a>
+                            <a href="delegates.html" class="white-text d-flex justify-content-end"><h5>Find out more <i class="fa fa-angle-double-right"></i></h5></a>
                         </div>
                     </div>
                 </div>
@@ -178,7 +178,7 @@
                             <!-- Text -->
                             <p class="card-text white-text mb-4">At DIMUN IX, Key Stage 3 (middle school) delegates will be debating a total of 34 topics in eight different committees. Click here to find out information on the committees.</p>
                             <!-- Link -->
-                            <a href="#!" class="white-text d-flex justify-content-end"><h5>Find out more <i class="fa fa-angle-double-right"></i></h5></a>
+                            <a href="committees.html" class="white-text d-flex justify-content-end"><h5>Find out more <i class="fa fa-angle-double-right"></i></h5></a>
                         </div>
                     </div>
                 </div>
