--- a/spotlight.html
+++ b/spotlight.html
@@ -28,6 +28,23 @@
                     <a class="nav-link text-dark" href="committees.html">Committees</a>
                 </li>
                 <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Logistics</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="transport.html">Transport</a>
+                        <a class="dropdown-item" href="accomadation.html">Accomadation</a>
+                        <a class="dropdown-item" href="schedule.html">Schedule</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" href="press.html">Press</a>
+                </li>
+                <li class="nav-item">
+                    <a class="navbar-brand text-dark h1" href="index.html"><strong>DIMUN</strong></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" href="spotlight.html">Spotlight</a>
+                </li>
+                <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Conference</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="directors.html">Directors</a>
@@ -38,23 +55,6 @@
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="theme.html">Theme</a>
                     </div>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Logistics</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="transport.html">Transport</a>
-                        <a class="dropdown-item" href="accomadation.html">Accomadation</a>
-                        <a class="dropdown-item" href="schedule.html">Schedule</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="navbar-brand text-dark h1" href="index.html"><strong>DIMUN</strong></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-dark" href="spotlight.html">Spotlight</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-dark" href="press.html">Press</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-dark" href="contact.html">Contact Us</a>
@@ -72,6 +72,39 @@
             <div class="team">
                 <h1> Spotlight  </h1>
                 <hr>
+                <p>Since DIMUN VII, the annual DIMUN Spotlight has been bringing delegates to the stage. DIMUN Spotlight is a special event for DIMUN in which delegates can show off any talent that they might have, whether it be singing, magic tricks or something wholly different. Whatever it may be, DIMUN Spotlight is a time for delegates to take a break from a day full of resolutions and debating to enjoy performances and see just exactly what hidden talents the delegates of their committees have. It is a time for the delegates to show how much more their abilities extend beyond debating and writing, beyond even MUN itself. Delegates will all be encouraged to sign up and fill the evening with exciting performances and shows. Who knows what spectacular performances will there be this year?
+                </p>
+                <p><strong>DIMUN VIII Spotlight Poster</strong></p>
+                <img src="img/SpotlightPoster.png" style="width:30%;min-width: 250px;height:auto;">
+                <br><br>
+                <div class="row">
+                    <div class="col-md-3 mb-3">
+                        <img class="img-fluid z-depth-1" src="img/Spotlight1.JPG">
+                    </div>
+                    <div class="col-md-3 mb-3">
+                        <img class="img-fluid z-depth-1" src="img/Spotlight2.JPG">
+                    </div>
+                    <div class="col-md-3 mb-3">
+                        <img class="img-fluid z-depth-1" src="img/Spotlight3.JPG">
+                    </div>
+                    <div class="col-md-3 mb-3">
+                        <img class="img-fluid z-depth-1" src="img/Spotlight4.JPG">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3 mb-3">
+                        <img class="img-fluid z-depth-1" src="img/Spotlight5.JPG">
+                    </div>
+                    <div class="col-md-3 mb-3">
+                        <img class="img-fluid z-depth-1" src="img/Spotlight6.JPG">
+                    </div>
+                    <div class="col-md-3 mb-3">
+                        <img class="img-fluid z-depth-1" src="img/Spotlight7.JPG">
+                    </div>
+                    <div class="col-md-3 mb-3">
+                        <img class="img-fluid z-depth-1" src="img/Spotlight8.JPG">
+                    </div>
+                </div>
             </div>
         </div>
     </section>
