--- a/contact.html
+++ b/contact.html
@@ -11,14 +11,13 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
-      <link href="css/bootstrap.min.css" rel="stylesheet">
-      <!-- Material Design Bootstrap -->
-      <link href="css/mdb.min.css" rel="stylesheet">
-      <!-- Custom DIMUN style -->
-      <link href="css/dimun.css" rel="stylesheet">
-      <!-- Font Awesome -->
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-
+     <link href="css/bootstrap.min.css" rel="stylesheet">
+     <!-- Material Design Bootstrap -->
+     <link href="css/mdb.min.css" rel="stylesheet">
+     <!-- Custom DIMUN style -->
+     <link href="css/dimun.css" rel="stylesheet">
+     <!-- Font Awesome -->
+     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 <body data-spy="scroll" data-target="#scroll-list" data-offset="300">
     <header>
@@ -26,6 +25,23 @@
             <ul class="nav" id="navigation">
                 <li class="nav-item">
                     <a class="nav-link text-dark" href="committees.html">Committees</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Logistics</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="transport.html">Transport</a>
+                        <a class="dropdown-item" href="accomadation.html">Accomadation</a>
+                        <a class="dropdown-item" href="schedule.html">Schedule</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" href="press.html">Press</a>
+                </li>
+                <li class="nav-item">
+                    <a class="navbar-brand text-dark h1" href="index.html"><strong>DIMUN</strong></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" href="spotlight.html">Spotlight</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Conference</a>
@@ -38,23 +54,6 @@
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="theme.html">Theme</a>
                     </div>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Logistics</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="transport.html">Transport</a>
-                        <a class="dropdown-item" href="accomadation.html">Accomadation</a>
-                        <a class="dropdown-item" href="schedule.html">Schedule</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="navbar-brand text-dark h1" href="index.html"><strong>DIMUN</strong></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-dark" href="spotlight.html">Spotlight</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-dark" href="press.html">Press</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-dark" href="contact.html">Contact Us</a>
@@ -73,7 +72,7 @@
       <!-- Section heading -->
       <h2 class="h1-responsive font-weight-bold text-center my-5">Contact us</h2>
       <!-- Section description -->
-      <p class="text-center w-responsive mx-auto mb-5">The DIMUN Tech team will ensure that your concerns/questions be adddressed quickly.</p>
+      <p class="text-center w-responsive mx-auto mb-5">The DIMUN Tech team will ensure that your concerns/questions be addressed quickly.</p>
 
       <!-- Grid row -->
       <div class="row">
@@ -89,8 +88,8 @@
               <!-- Grid column -->
               <div class="col-md-6">
                 <div class="md-form mb-0">
-                  <input type="text" id="contact-name" class="form-control">
-                  <label for="contact-name" class="">Your name</label>
+                  <input type="text" id="contact-name" class="form-control validate" required required minlength="1">
+                  <label data-error="invalid" data-success="valid" for="contact-name" class="">Your name</label>
                 </div>
               </div>
               <!-- Grid column -->
@@ -98,8 +97,8 @@
               <!-- Grid column -->
               <div class="col-md-6">
                 <div class="md-form mb-0">
-                  <input type="text" id="contact-email" class="form-control">
-                  <label for="contact-email" class="">Your email</label>
+                  <input type="email" id="contact-email" class="form-control validate" required required minlength="1">
+                  <label data-error="invalid" data-success="valid" for="contact-email" class="">Your email</label>
                 </div>
               </div>
               <!-- Grid column -->
@@ -113,8 +112,8 @@
               <!-- Grid column -->
               <div class="col-md-12">
                 <div class="md-form mb-0">
-                  <input type="text" id="contact-Subject" class="form-control">
-                  <label for="contact-Subject" class="">Subject</label>
+                  <input type="text" id="contact-subject" class="form-control validate" required minlength="1">
+                  <label data-error="invalid" data-success="valid" for="contact-Subject" class="">Subject</label>
                 </div>
               </div>
               <!-- Grid column -->
@@ -128,8 +127,8 @@
               <!-- Grid column -->
               <div class="col-md-12">
                 <div class="md-form">
-                  <textarea type="text" id="contact-message" class="form-control md-textarea" rows="3"></textarea>
-                  <label for="contact-message">Your message</label>
+                  <textarea type="text" id="contact-message" class="form-control md-textarea validate" rows="3" required required minlength="1"></textarea>
+                  <label data-error="invalid" data-success="valid" for="contact-message">Your message</label>
                 </div>
               </div>
               <!-- Grid column -->
@@ -140,7 +139,7 @@
           </form>
 
           <div class="text-center text-md-left">
-            <a class="btn btn-primary btn-md">Send</a>
+            <a class="btn btn-primary btn-md" id="send">Send</a>
           </div>
 
         </div>
@@ -184,7 +183,38 @@
     <script type="text/javascript" src="js/mdb.min.js"></script>
     <!-- DIMUN Javascript -->
     <script type="text/javascript" src="js/dimun.js"></script>
+    <!-- Email -->
+    <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.2.4/email.min.js"></script>
 
+    <script type="text/javascript">
+    (function(){
+        emailjs.init("user_X0tg85WhNLHAhjfmPJb2c");
+    })();
+
+    $("#send").click(function(){
+        if ( document.getElementById("contact-name").checkValidity() && document.getElementById("contact-email").checkValidity() && document.getElementById("contact-subject").checkValidity() && document.getElementById("contact-message").checkValidity()){
+            var from = $("#contact-name").val();
+            var email = $("#contact-email").val();
+            var message = $("#contact-message").val();
+            var subject = $("#contact-subject").val();
+
+            var template_params = {
+                "subject": subject,
+                "from_name": from,
+                "message_html": message,
+                "sender_email": email
+            }
+
+            var service_id = "default_service";
+            var template_id = "dimun_feedback";
+
+            console.log(template_params);
+            emailjs.send(service_id,template_id,template_params);
+
+            alert("request sent.")
+        };
+    });
+    </script>
 </body>
 
 </html>
