--- a/theme.html
+++ b/theme.html
@@ -28,6 +28,23 @@
                     <a class="nav-link text-dark" href="committees.html">Committees</a>
                 </li>
                 <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Logistics</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="transport.html">Transport</a>
+                        <a class="dropdown-item" href="accomadation.html">Accomadation</a>
+                        <a class="dropdown-item" href="schedule.html">Schedule</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" href="press.html">Press</a>
+                </li>
+                <li class="nav-item">
+                    <a class="navbar-brand text-dark h1" href="index.html"><strong>DIMUN</strong></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" href="spotlight.html">Spotlight</a>
+                </li>
+                <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Conference</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="directors.html">Directors</a>
@@ -38,23 +55,6 @@
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="theme.html">Theme</a>
                     </div>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Logistics</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="transport.html">Transport</a>
-                        <a class="dropdown-item" href="accomadation.html">Accomadation</a>
-                        <a class="dropdown-item" href="schedule.html">Schedule</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="navbar-brand text-dark h1" href="index.html"><strong>DIMUN</strong></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-dark" href="spotlight.html">Spotlight</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-dark" href="press.html">Press</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-dark" href="contact.html">Contact Us</a>
@@ -73,6 +73,7 @@
                 <p><small>The theme of the conference this year is</small></p>
                 <h1>Beyond Borders</h1>
                 <hr>
+                <p>As the worlds strives ever forwards into the twenty-first century, we enter a new age of diplomacy. Much of the issues now being debated by the United Nations is no longer between nation-states. Rather, non-state parties are far more often discussed. Indeed, technology has given the individual more power than ever to express their views and in light of the many conflicts, refugee crisis, and independence movements that have arisen in the turn of the century, it becomes ever the more important that diplomacy be as much nation to people as it is nation to nation. Thus, this year at DIMUN IX, we encourage you to look ever more beyond borders, to the individuals that makes up this world.</p>
             </div>
         </div>
     </section>
