Name changes on SO

--- a/so.html
+++ b/so.html
@@ -81,7 +81,7 @@
 					Ethan Hou<br>
 					Elina Du<br>
 					<strong>Environment Commission [ENV]</strong><br>
-					Eleanor Anna Green<br>
+					Ellie Green<br>
 					Leighton DuYang<br>
 					<strong>Economic and Social [ECOSOC]</strong><br>
 					Jaewon Choi<br>
@@ -90,7 +90,7 @@
 					Heather Leung<br>
 					Joy Ryu<br>
 					<strong>Special Conference [SPC]</strong><br>
-					Su Li<br>
+					Su Lee<br>
 					Ashley Zhou<br>
 					<strong>Disarmament Council [DC]</strong><br>
 					Sean Choi<br>
