--- a/sop.html
+++ b/sop.html
@@ -50,7 +50,7 @@
                     <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Logistics</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="transport.html">Transport</a>
-                        <a class="dropdown-item" href="accommodation.html">Accommodation</a>
+                        <a class="dropdown-item" href="accomadation.html">Accomadation</a>
                         <a class="dropdown-item" href="schedule.html">Schedule</a>
                     </div>
                 </li>
@@ -71,55 +71,23 @@
 </header>
 
     <section class="section-header text-center" id="section-header">
-        <strong><h1 class="display-1">Dimunite</h1></strong>
+        <strong><h1 class="display-1">Statement of purpose</h1></strong>
     </section>
 
     <section>
         <div class="text-center container-fluid first">
             <div class="team">
-                <h1>Press</h1>
-                <a href="photos.html"><button type="button" class="btn btn-primary">Photos</button></a>
+                <p><small>Jackel Cheung</small></p>
+                <h1>Statement of purpose</h1>
                 <hr>
-                <h2> DIMUNITE VIII issue </h2>
-                <div class="row">
-                    <div class="col-sm-4 mb-3">
-                        <a href="https://github.com/dadimun/pdfs/raw/master/Press/VIII/DIMUNITE%20ISSUE%201.pdf">
-                            <img src="img/DI1.jpg" class="img-fluid z-depth-1">
-                        </a>
-                    </div>
-                    <div class="col-sm-4 mb-3">
-                        <a href="https://github.com/dadimun/pdfs/raw/master/Press/VIII/DIMUNITE%20ISSUE%202.pdf">
-                            <img src="img/DI2.png" class="img-fluid z-depth-1">
-                        </a>
-                    </div>
-                    <div class="col-sm-4 mb-3">
-                        <a href="https://github.com/dadimun/pdfs/raw/master/Press/VIII/DIMUNITE%20ISSUE%203.pdf">
-                            <img src="img/DI3.png" class="img-fluid z-depth-1">
-                        </a>
-                    </div>
-                </div>
-
-                <hr>
-                <h2> DIMUNITE VII issue </h2>
-                <div class="row">
-                    <div class="col-sm-4 mb-3">
-                        <a href="https://github.com/dadimun/pdfs/raw/master/Press/DIMUNITE%20issue%201%20.pdf">
-                            <img src="img/DI4.png" class="img-fluid z-depth-1">
-                        </a>
-                    </div>
-                    <div class="col-sm-4 mb-3">
-                        <a href="https://github.com/dadimun/pdfs/raw/master/Press/DIMUNITE%20issue%202%20.pdf">
-                            <img src="img/DI5.png" class="img-fluid z-depth-1">
-                        </a>
-                    </div>
-                    <div class="col-sm-4 mb-3">
-                        <a href="https://github.com/dadimun/pdfs/raw/master/Press/DIMUNITE%20issue%203%20.pdf">
-                            <img src="img/DI6.png" class="img-fluid z-depth-1">
-                        </a>
-                    </div>
-                </div>
+                <p>Dulwich International Model United Nations was founded by Miranda Melcher and Benjamin Tan in 2010. Though we did not have the privilege of witnessing them build DIMUN from scratch, their initial resolve and ardour continues to inspire us today. The annual DIMUN conference serves to provide curious middle school students with the opportunity to discover and experience MUN from a young age.
+                    <br><br>The rigid procedures and crowded committee rooms of MUN are not as apparent at DIMUN conferences; It’s a reminder of the basics of diplomacy: the simplest form of dialogue in order to achieve unanimity. DIMUN Delegates needn’t be seasoned, polished MUN debaters. We look for delegates who are not restricted by pre-conditioned approaches to global issues but have their original perspective, original perspectives that will become the foundation of tomorrow’s world. There will be no restraints at DIMUN: no judgement, no censorship, just opportunity.
+                    <br><br>DIMUN was created by Students, led by students and will continue to be led by students for many years to come. Our philosophy was shaped by the belief that each ‘generation’ of MUNers will inspire the next and advise them with their experience. The paths we pave now will make it easier for the next to discover their own.
+                    <br><br>Every Secretary-General, before and after me, pledge to guide, lead and stand to serve each participant of DIMUN, and I have faith that the legacy of DIMUN will continue to unreservedly serve the global community. </p>
             </div>
         </div>
+    </section>
+
 
     <!-- SCRIPTS -->
     <!-- JQuery -->
