--- a/index.html
+++ b/index.html
@@ -23,27 +23,17 @@
 
 <body>
     <header>
-        <nav class="navbar fixed-top navbar-light scrolling-navbar navbar-expand-lg justify-content-center">
-            <ul class="nav" id="navigation">
+
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
+            <a class="navbar-brand text-dark" href="#"><strong>DIMUN IX</strong></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="fas fa-list text-dark"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
                     <a class="nav-link text-dark" href="committees.html">Committees</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Logistics</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="transport.html">Transport</a>
-                        <a class="dropdown-item" href="accomadation.html">Accomadation</a>
-                        <a class="dropdown-item" href="schedule.html">Schedule</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-dark" href="press.html">Press</a>
-                </li>
-                <li class="nav-item">
-                    <a class="navbar-brand text-dark h1" href="index.html"><strong>DIMUN</strong></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-dark" href="spotlight.html">Spotlight</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Conference</a>
@@ -54,15 +44,33 @@
                         <a class="dropdown-item" href="delegates.html">Delegates</a>
                         <a class="dropdown-item" href="alumini.html">Alumini</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="theme.html">Theme</a>
+                        <a class="dropdown-item" href="sop.html">Statement of purpose</a>
                     </div>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Logistics</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="transport.html">Transport</a>
+                        <a class="dropdown-item" href="accommodation.html">Accommodation</a>
+                        <a class="dropdown-item" href="schedule.html">Schedule</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" href="spotlight.html">Spotlight</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" href="press.html">Press</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link text-dark" href="contact.html">Contact Us</a>
                 </li>
             </ul>
-        </nav>
-    </header>
+        </div>
+  </nav>
+
+</header>
 
     <section class="container-fluid view1" id="view1">
         <div class="view1-bg" id="view1-bg">
@@ -72,7 +80,27 @@
         <a href="#about"><i class="container-fluid fas fa-angle-double-down text-dark text-center animated flash slow infinite" id="view-scroll"></i></a>
     </section>
 
-    <section class="container-fluid view2" id="about">
+    <section class="about container-fluid" id="about">
+        <div class="text-center">
+            <h1 class="text-dark h1">About Us </h1>
+            <br>
+            <hr>
+            <br>
+            <p class="text-dark">Honourable MUN Directors, esteemed delegates, respected committee Chairs and welcome guests,
+
+                <br><br>DIMUN is back! The ninth annual Dulwich International Model United Nations conference (DIMUN IX) will be held at Dulwich College Beijing from 1st of March to 3rd of March 2019.
+
+                <br><br>Model United Nations is a unique opportunity for students to expand their knowledge of world affairs and improve their public speaking skills through research, discussion and debate with other international students who share the same passions.
+
+                <br><br>At DIMUN IX, Key Stage 3 (middle school) delegates will be debating a total of 34 topics in eight different committees. The conference will be supported by experienced Key Stage 4/5 (high school) chairs and the DIMUNITE press team, led by Secretaries-General Kevin Yao and Jennifer Zhou.
+
+                <br><br>Please do not hesitate to contact us for more information, or any questions regarding the conference at:
+                <a href="contact.html">dimun@dulwich-beijing.cn.</a>
+            </p>
+        </div>
+    </section>
+
+    <section class="container-fluid view2" id="theme">
         <div id="view2-image-right">
             <img src="img/view2-image-right.jpg">
         </div>
@@ -84,14 +112,10 @@
                     <img src="img/view2-image-center.jpg">
                 </div>
             </div>
-            <div class="col-lg-5 text-center about-text" style="padding;" id="about-text">
-                <p class="h1">About Us</p>
+            <div class="col-lg-5 text-lg-right text-md-center theme-text" style="padding;" id="theme-text">
+                <p class="h1">Beyond Borders</p>
                 <hr>
-                Honourable MUN Directors, esteemed delegates, respected committee Chairs and welcome guests,
-                <br><br>DIMUN is back! The ninth annual Dulwich International Model United Nations conference (DIMUN IX) will be held at Dulwich College Beijing from 1st of March to 3rd of March 2019.
-                <br><br>Model United Nations is a unique opportunity for students to expand their knowledge of world affairs and improve their public speaking skills through research, discussion and debate with other international students who share the same passions.
-                <br><br>At DIMUN IX, Key Stage 3 (middle school) delegates will be debating a total of 34 topics in eight different committees. The conference will be supported by experienced Key Stage 4/5 (high school) chairs and the DIMUNITE press team, led by Secretaries-General Kevin Yao and Jennifer Zhou.
-                <br><br>Please do not hesitate to contact us for more information, or any questions regarding the conference at dimun@dulwich-beijing.cn.
+                As the worlds strives ever forwards into the twenty-first century, we enter a new age of diplomacy. Much of the issues now being debated by the United Nations is no longer between nation-states. Rather, non-state parties are far more often discussed. Indeed, technology has given the individual more power than ever to express their views and in light of the many conflicts, refugee crisis, and independence movements that have arisen in the turn of the century, it becomes ever the more important that diplomacy be as much nation to people as it is nation to nation. Thus, this year at DIMUN IX, we encourage you to look ever more beyond borders, to the individuals that makes up this world.
             </div>
         </div>
     </section>
@@ -120,7 +144,7 @@
                     <div class="card">
                         <!-- Card image -->
                         <div class="view overlay">
-                            <img class="card-img-top" src="img/photo1.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="img/spotlight4.jpg" alt="Card image cap">
                             <a>
                                 <div class="mask rgba-white-slight"></div>
                             </a>
