--- a/schedule.html
+++ b/schedule.html
@@ -20,29 +20,19 @@
 	      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
 	</head>
-	<body data-spy="scroll" data-target="#scroll-list" data-offset="300">
-	    <header>
-	        <nav class="navbar fixed-top navbar-light scrolling-navbar navbar-expand-lg justify-content-center">
-	            <ul class="nav" id="navigation">
+	<body data-spy="scroll" data-target="#scroll-list" data-offset="250">
+		<header>
+
+	        <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
+	            <a class="navbar-brand text-dark" href="index.html"><strong>DIMUN IX</strong></a>
+	            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+	            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+	            <span class="fas fa-list text-dark"></span>
+	        </button>
+	        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+	            <ul class="navbar-nav mr-auto">
 	                <li class="nav-item">
 	                    <a class="nav-link text-dark" href="committees.html">Committees</a>
-	                </li>
-	                <li class="nav-item dropdown">
-	                    <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Logistics</a>
-	                    <div class="dropdown-menu">
-	                        <a class="dropdown-item" href="transport.html">Transport</a>
-	                        <a class="dropdown-item" href="accomadation.html">Accomadation</a>
-	                        <a class="dropdown-item" href="schedule.html">Schedule</a>
-	                    </div>
-	                </li>
-	                <li class="nav-item">
-	                    <a class="nav-link text-dark" href="press.html">Press</a>
-	                </li>
-	                <li class="nav-item">
-	                    <a class="navbar-brand text-dark h1" href="index.html"><strong>DIMUN</strong></a>
-	                </li>
-	                <li class="nav-item">
-	                    <a class="nav-link text-dark" href="spotlight.html">Spotlight</a>
 	                </li>
 	                <li class="nav-item dropdown">
 	                    <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Conference</a>
@@ -53,15 +43,32 @@
 	                        <a class="dropdown-item" href="delegates.html">Delegates</a>
 	                        <a class="dropdown-item" href="alumini.html">Alumini</a>
 	                        <div class="dropdown-divider"></div>
-	                        <a class="dropdown-item" href="theme.html">Theme</a>
+	                        <a class="dropdown-item" href="sop.html">Statement of purpose</a>
 	                    </div>
 	                </li>
+	                <li class="nav-item dropdown">
+	                    <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Logistics</a>
+	                    <div class="dropdown-menu">
+	                        <a class="dropdown-item" href="transport.html">Transport</a>
+	                        <a class="dropdown-item" href="accommodation.html">Accommodation</a>
+	                        <a class="dropdown-item" href="schedule.html">Schedule</a>
+	                    </div>
+	                </li>
+	                <li class="nav-item">
+	                    <a class="nav-link text-dark" href="spotlight.html">Spotlight</a>
+	                </li>
+	                <li class="nav-item">
+	                    <a class="nav-link text-dark" href="press.html">Press</a>
+	                </li>
+	            </ul>
+	            <ul class="navbar-nav">
 	                <li class="nav-item">
 	                    <a class="nav-link text-dark" href="contact.html">Contact Us</a>
 	                </li>
 	            </ul>
-	        </nav>
-	    </header>
+	        </div>
+	  	</nav>
+	</header>
 
 	    <section class="section-header text-center" id="section-header">
 	        <strong><h1 class="display-1">Schedule</h1></strong>
@@ -134,7 +141,7 @@
 							<td style="text-align:left;float:left;">Debate begins</td>
 							<td style="text-align:right;float:right;">10:45</td>
 						</tr>
-						<tr>	
+						<tr>
 							<td style="text-align:left;float:left;">Approval Panel closes<br>Lunch</td>
 							<td style="text-align:right;float:right;">12:30</td>
 						</tr>
