--- a/spotlight.html
+++ b/spotlight.html
@@ -22,27 +22,17 @@
 </head>
 <body data-spy="scroll" data-target="#scroll-list" data-offset="300">
     <header>
-        <nav class="navbar fixed-top navbar-light scrolling-navbar navbar-expand-lg justify-content-center">
-            <ul class="nav" id="navigation">
+
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
+            <a class="navbar-brand text-dark" href="index.html"><strong>DIMUN IX</strong></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="fas fa-list text-dark"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
                     <a class="nav-link text-dark" href="committees.html">Committees</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Logistics</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="transport.html">Transport</a>
-                        <a class="dropdown-item" href="accomadation.html">Accomadation</a>
-                        <a class="dropdown-item" href="schedule.html">Schedule</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-dark" href="press.html">Press</a>
-                </li>
-                <li class="nav-item">
-                    <a class="navbar-brand text-dark h1" href="index.html"><strong>DIMUN</strong></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-dark" href="spotlight.html">Spotlight</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Conference</a>
@@ -53,15 +43,32 @@
                         <a class="dropdown-item" href="delegates.html">Delegates</a>
                         <a class="dropdown-item" href="alumini.html">Alumini</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="theme.html">Theme</a>
+                        <a class="dropdown-item" href="sop.html">Statement of purpose</a>
                     </div>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Logistics</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="transport.html">Transport</a>
+                        <a class="dropdown-item" href="accommodation.html">Accommodation</a>
+                        <a class="dropdown-item" href="schedule.html">Schedule</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" href="spotlight.html">Spotlight</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" href="press.html">Press</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link text-dark" href="contact.html">Contact Us</a>
                 </li>
             </ul>
-        </nav>
-    </header>
+        </div>
+    </nav>
+</header>
 
     <section class="section-header text-center" id="section-header">
         <strong><h1 class="display-1">Spotlight</h1></strong>
@@ -79,30 +86,30 @@
                 <br><br>
                 <div class="row">
                     <div class="col-md-3 mb-3">
-                        <img class="img-fluid z-depth-1" src="img/Spotlight1.JPG">
+                        <img class="img-fluid z-depth-1 hoverable" src="img/Spotlight1.JPG">
                     </div>
                     <div class="col-md-3 mb-3">
-                        <img class="img-fluid z-depth-1" src="img/Spotlight2.JPG">
+                        <img class="img-fluid z-depth-1 hoverable" src="img/Spotlight2.JPG">
                     </div>
                     <div class="col-md-3 mb-3">
-                        <img class="img-fluid z-depth-1" src="img/Spotlight3.JPG">
+                        <img class="img-fluid z-depth-1 hoverable" src="img/Spotlight3.JPG">
                     </div>
                     <div class="col-md-3 mb-3">
-                        <img class="img-fluid z-depth-1" src="img/Spotlight4.JPG">
+                        <img class="img-fluid z-depth-1 hoverable" src="img/Spotlight4.JPG">
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-3 mb-3">
-                        <img class="img-fluid z-depth-1" src="img/Spotlight5.JPG">
+                        <img class="img-fluid z-depth-1 hoverable" src="img/Spotlight5.JPG">
                     </div>
                     <div class="col-md-3 mb-3">
-                        <img class="img-fluid z-depth-1" src="img/Spotlight6.JPG">
+                        <img class="img-fluid z-depth-1 hoverable" src="img/Spotlight6.JPG">
                     </div>
                     <div class="col-md-3 mb-3">
-                        <img class="img-fluid z-depth-1" src="img/Spotlight7.JPG">
+                        <img class="img-fluid z-depth-1 hoverable" src="img/Spotlight7.JPG">
                     </div>
                     <div class="col-md-3 mb-3">
-                        <img class="img-fluid z-depth-1" src="img/Spotlight8.JPG">
+                        <img class="img-fluid z-depth-1 hoverable" src="img/Spotlight8.JPG">
                     </div>
                 </div>
             </div>
