--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <div class="card">
                         <!-- Card image -->
                         <div class="view overlay">
-                            <img class="card-img-top" src="img/spotlight4.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="img/spotlight4.JPG" alt="Card image cap">
                             <a>
                                 <div class="mask rgba-white-slight"></div>
                             </a>
