--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
   <title>DIMUN IX</title>
   <!-- favicon -->
   <link rel="shortcut icon" href="logo.ico">
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- Bootstrap core CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/bootstrap4.min.css" rel="stylesheet">
   <!-- Material Design Bootstrap -->
   <link href="css/mdb.min.css" rel="stylesheet">
   <!-- Custom DIMUN style -->
