Updated bootstrap js

--- a/spotlight.html
+++ b/spotlight.html
@@ -103,13 +103,13 @@
                         <img class="img-fluid z-depth-1 hoverable" src="img/Spotlight5.JPG">
                     </div>
                     <div class="col-md-3 mb-3">
-                        <img class="img-fluid z-depth-1 hoverable" src="img/Spotlight6.JPG">
+                        <img class="img-fluid z-depth-1 hoverable" src="img/Spotlight6.jpg">
                     </div>
                     <div class="col-md-3 mb-3">
-                        <img class="img-fluid z-depth-1 hoverable" src="img/Spotlight7.JPG">
+                        <img class="img-fluid z-depth-1 hoverable" src="img/Spotlight7.jpg">
                     </div>
                     <div class="col-md-3 mb-3">
-                        <img class="img-fluid z-depth-1 hoverable" src="img/Spotlight8.JPG">
+                        <img class="img-fluid z-depth-1 hoverable" src="img/Spotlight8.jpg">
                     </div>
                 </div>
             </div>
@@ -123,7 +123,7 @@
     <!-- Bootstrap tooltips -->
     <script type="text/javascript" src="js/popper.min.js"></script>
     <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap4.min.js"></script>
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="js/mdb.min.js"></script>
     <!-- DIMUN Javascript -->
