--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <div class="card">
                         <!-- Card image -->
                         <div class="view overlay">
-                            <img class="card-img-top" src="img/spotlight4.JPG" alt="Card image cap">
+                            <img class="card-img-top" src="img/Spotlight4.JPG" alt="Card image cap">
                             <a>
                                 <div class="mask rgba-white-slight"></div>
                             </a>
@@ -216,7 +216,7 @@
     <!-- Bootstrap tooltips -->
     <script type="text/javascript" src="js/popper.min.js"></script>
     <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap4.min.js"></script>
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="js/mdb.min.js"></script>
     <!-- DIMUN Javascript -->
