Schedule for DELEGATE
Need new page for the Director's schedule

--- a/schedule.html
+++ b/schedule.html
@@ -78,7 +78,7 @@
 	        <div class="text-center container-fluid first">
 	            <div class="team">
 	                <h1> Schedule </h1>
-	                <p><small>Below is the schedule for the conference from March 1st to 3rd.</small></p>
+	                <p><small>Below is the Delegate's schedule for the conference.</small></p>
 	                <hr>
 					<h2>Friday, 1st March 2019</h2>
 					<table style="width:100%; ">
