Adjusted to use https

--- a/transport.html
+++ b/transport.html
@@ -111,7 +111,7 @@
     <!-- DIMUN Javascript -->
     <script type="text/javascript" src="js/dimun.js"></script>
     <!-- Baidu map -->
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=8BB7F0E5C9C77BD6B9B655DB928B74B6E2D838FD"></script>
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=8BB7F0E5C9C77BD6B9B655DB928B74B6E2D838FD"></script>
     <script>
         var map = new BMap.Map("container");
         var point = new BMap.Point(116.575762, 40.045202);
