--- a/accommodation.html
+++ b/accommodation.html
@@ -128,7 +128,7 @@
     <!-- DIMUN Javascript -->
     <script type="text/javascript" src="js/dimun.js"></script>
     <!-- Baidu map -->
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=8BB7F0E5C9C77BD6B9B655DB928B74B6E2D838FD"></script>
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=8BB7F0E5C9C77BD6B9B655DB928B74B6E2D838FD"></script>
     <script>
         var map = new BMap.Map("container-1");
         var point = new BMap.Point(116.563037, 40.069701);
