Name changes (DIS and Conference)

--- a/committees.html
+++ b/committees.html
@@ -155,7 +155,7 @@
     <div class="container-fluid dark wow slideInRight" id="committee-view6">
         <section class="committee" id="SPC">
             <br>
-            <h1 class="display-4 text-light">Special Reference</h1>
+            <h1 class="display-4 text-light">Special Conference</h1>
             <hr class="text-light">
             <h5 class="text-light">Measures to improve recognition of Kurdish minorities in the Middle East
                 <br><br>Measures to facilitate peace discussion with remaining ISIS groups in Syria
