--- a/so.html
+++ b/so.html
@@ -99,7 +99,7 @@
 					<strong>Special Conference [SPC]</strong><br>
 					Su Lee<br>
 					Ashley Zhou<br>
-					<strong>Disarmament Council [DC]</strong><br>
+					<strong>Disarmament Council [DIS]</strong><br>
 					Sean Choi<br>
 					Guan Rong Tan<br>
 					<strong>Security Council [SC]</strong><br>
