--- a/committees.html
+++ b/committees.html
@@ -168,7 +168,7 @@
     <br>
     <div class="container-fluid white wow slideInRight" id="committee-view7">
         <section class="committee" id="DIS">
-            <h1 class="display-4 text-dark white">Disarment Council</h1>
+            <h1 class="display-4 text-dark white">Disarmament Council</h1>
             <hr>
             <h5 class="text-dark"> Preventing the militarization of outer space
                 <br><br>Addressing the issue of biological weapons in warfare
@@ -184,7 +184,6 @@
             <h1 class="display-4 text-light">Security Council</h1>
             <hr class="text-light">
             <h5 class="text-light"> The regulation of international arms corporations
-                <br><br>Facilitating communication and the peaceful resolution between Israel and Palestine
                 <br><br>De-escalation of nuclear armament in the DPRK
                 <br><br>Measures to reduce the armament of paramilitary forces in the Libyan Civil War
             <h5>
@@ -196,8 +195,8 @@
         <section class="committee" id="AP">
             <h1 class="display-4 text-dark white">Advisory Panel</h1>
             <hr>
-            <h5 class="text-dark"> The question of humanitarian exemptions in sanction regimes
-                <br><br>Rebuilding infrastructure in the aftermath of the Syrian conflict
+            <h5 class="text-dark"> The question of humanitarian exemptions on the sanction regime of the DPRK
+                <br><br>Rebuilding infrastructure damaged as a result of the Libyan Civil War
             <h5>
             <br>
         </section>
